LOGIN NUEVO YA FUNCIONA EN SU TOTALIDAD

--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -42,7 +42,8 @@
                 <div class="logo-container">
                     <!-- Aquí puedes agregar el código o la imagen del logotipo de tu empresa -->
                     <!-- Por ejemplo, si es una imagen: -->
-                    <img src="~/IMG/ZeroStresLogo.png" alt="Logo de la empresa" class="logo-container">
+                    <img src="https://i.imgur.com/9RJLomZ.png" alt="Logo de la empresa" class="img-fluid logo-container" />
+
                 </div>
 
                 <li class="Nombre">
@@ -170,6 +171,7 @@
     <script src="~/js/Menu.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/JavaScriptHome.js" asp-append-version="true"></script>
+
  
     @await RenderSectionAsync("Scripts", required: false)
 
