--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Login.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Login.cshtml
@@ -4,51 +4,103 @@
     ViewData["Title"] = "Login";
     Layout = null;
 }
-<html>
+
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-<link rel="stylesheet" href="~/css/Login.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
 
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+
+    <style>
+        /* Add your custom styles here */
+        body {
+            background-color: #ffffff;
+        }
+    </style>
 </head>
-
 <body>
-<div class="login-box">
-    <div class="imagen">
-        <img src="~/IMG/ZeroStresLogo.png" alt="Logo" />
-    </div>
+    <main>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-5">
+                        <div class="card-header">
+                            <h3 class="text-center font-weight-light my-4">Iniciar Sesión</h3>
+                            <div style="text-align:center">
+                                <img class="img-fluid" src="https://i.imgur.com/9RJLomZ.png" />
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <form asp-action="Login" method="post">
 
-    <form asp-action="Login" style="width: 15rem;">
-       
-        <div class="user-box">
-            <input asp-for="Login" class="form-control form-control-lg" placeholder="Ingrese su usuario" />
 
-        </div>
-        
+                                <div class="mb-3">
+                                    <label asp-for="Login" class="small mb-1" style="font-weight: bold; color: #555;">Usuario</label>
+                                    <input asp-for="Login" class="form-control" placeholder="Ingrese el usuario" />
+                                    <span asp-validation-for="Login" class="text-danger"></span>
+                                </div>
 
-        <div class="user-box">
-            <input asp-for="Password" class="form-control form-control-lg" placeholder="Introduce la contraseña" />
-        </div>
+                                <div class="form-floating mb-3">
+                                    <label asp-for="Password" class="small mb-1" style="font-weight: bold; color: #555;">Contraseña</label>
+                                    <div class="input-group">
+                                        <input asp-for="Password" type="password" class="form-control" placeholder="Ingresar contraseña" />
+                                        <div class="input-group-append">
+                                            <button type="button" class="btn btn-success" onmousedown="showPassword()" onmouseup="hidePassword()" onmouseout="hidePassword()">
+                                                <i class="fas fa-eye"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
 
-        <center>
-            <a href="">
-                <span></span>
-                <span></span>
-                    
-                  <div class="form-group">
+                                <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                    <input type="submit" value="E N T R A R" class="btn btn-success btn-block" />
+                                </div>
+                            </form>
+                        </div>
 
-                        <input type="submit"value="E N T R A R" class="btn wider-button" />
+                        <div class="card-footer text-center py-3">
+                            <div class="small" style="font-style: italic; color: #555;">© 2024 La Bendición del Agricultor</div>
+                        </div>
+                    </div>
                 </div>
-                <span class="text-danger">@ViewBag.Error</span>
-                @Html.ActionLink("Registrarse", "Create",null,null,  new { @class = "btn regis-button" })
-            </a>
+            </div>
+        </div>
+    </main>
 
-        </center>
-       
-    </form>
-</div>
+
+    <!-- Bootstrap JS and Font Awesome JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        var passwordInput = document.getElementById("Password");
+        var buttonIcon = document.querySelector(".input-group-append i");
+        var isMouseDown = false;
+
+        function showPassword() {
+            passwordInput.type = "text";
+            buttonIcon.classList.remove("fa-eye");
+            buttonIcon.classList.add("fa-eye-slash");
+            isMouseDown = true;
+        }
+
+        function hidePassword() {
+            if (!isMouseDown) {
+                return;
+            }
+
+            passwordInput.type = "password";
+            buttonIcon.classList.remove("fa-eye-slash");
+            buttonIcon.classList.add("fa-eye");
+            isMouseDown = false;
+        }
+    </script>
 </body>
-
 </html>
 
 
