--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Factura/Delete.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Factura/Delete.cshtml
@@ -4,123 +4,115 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar Factura</h1>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Eliminar Factura</h1>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-8">
+                <form asp-action="Delete" class="needs-validation" novalidate>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h3>¿Está seguro que desea eliminar?</h3>
-<div>
-    <h4>Factura</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdFactura)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdFactura)
-        </dd>
+                    <input type="hidden" asp-for="IdFactura" class="form-control" />
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NumeroFactura)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NumeroFactura)
-        </dd>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label asp-for="NumeroFactura" class="control-label">Número de Factura</label>
+                            <input asp-for="NumeroFactura" class="form-control" disabled />
+                            <span asp-validation-for="NumeroFactura" class="text-danger"></span>
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaFacturacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaFacturacion)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="FechaFacturacion" class="control-label">Fecha de Facturación</label>
+                            <input asp-for="FechaFacturacion" class="form-control" disabled />
+                            <span asp-validation-for="FechaFacturacion" class="text-danger"></span>
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FormaPago)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FormaPago)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="FormaPago" class="control-label">Forma de Pago</label>
+                            <select asp-for="FormaPago" class="form-control" disabled>
+                                <option value="1">EFECTIVO</option>
+                            </select>
+                            <span asp-validation-for="FormaPago" class="text-danger"></span>
+                        </div>
+                    </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Descuento)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Descuento)
-        </dd>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label asp-for="Descuento" class="control-label">Descuento</label>
+                            <input asp-for="Descuento" class="form-control" disabled />
+                            <span asp-validation-for="Descuento" class="text-danger"></span>
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Impuesto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Impuesto)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="Impuesto" class="control-label">Impuesto</label>
+                            <input asp-for="Impuesto" class="form-control" disabled />
+                            <span asp-validation-for="Impuesto" class="text-danger"></span>
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FacturaTotal)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FacturaTotal)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="FacturaTotal" class="control-label">Total de la Factura</label>
+                            <input asp-for="FacturaTotal" class="form-control" disabled />
+                            <span asp-validation-for="FacturaTotal" class="text-danger"></span>
+                        </div>
+                    </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FacturaPagado)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FacturaPagado)
-        </dd>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label asp-for="FacturaPagado" class="control-label">Total Pagado</label>
+                            <input asp-for="FacturaPagado" class="form-control" disabled />
+                            <span asp-validation-for="FacturaPagado" class="text-danger"></span>
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FacturaCambio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FacturaCambio)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="FacturaCambio" class="control-label">Cambio de la Factura</label>
+                            <input asp-for="FacturaCambio" class="form-control" disabled />
+                            <span asp-validation-for="FacturaCambio" class="text-danger"></span>
+                        </div>
+                    </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreCliente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NombreCliente)
-        </dd>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label asp-for="NombreCliente" class="control-label">Nombre del Cliente</label>
+                            <input asp-for="NombreCliente" class="form-control" disabled />
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DireccionCliente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DireccionCliente)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="DireccionCliente" class="control-label">Dirección del Cliente</label>
+                            <input asp-for="DireccionCliente" class="form-control" disabled />
+                        </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TelefonoCliente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TelefonoCliente)
-        </dd>
+                        <div class="form-group col-md-4">
+                            <label asp-for="TelefonoCliente" class="control-label">Teléfono del Cliente</label>
+                            <input asp-for="TelefonoCliente" class="form-control" disabled />
+                        </div>
+                    </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DUICliente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DUICliente)
-        </dd>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label asp-for="DUICliente" class="control-label">DUI del Cliente</label>
+                            <input asp-for="DUICliente" class="form-control" disabled />
+                        </div>
+                    </div>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Nombre)
-        </dd>
-    </dl>
+                    <div class="form-group" style="margin-top: 10px;">
+                        @* FUNCIÓN ELIMINAR FACTURA*@
+                        @using (Html.BeginForm("Delete", "Factura", new { IdFactura = Model.IdFactura }, FormMethod.Post))
+                        {
+                            @Html.AntiForgeryToken()
 
-    @* FUNCIÓN ELIMINAR FACTURA*@
-    @using (Html.BeginForm("Delete", "Factura", new { IdFactura = Model.IdFactura }, FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
+                            <button type="submit" class="btn btn-danger" onclick="return confirm('¿Está seguro de eliminar?');" style="margin-left: 10px;">
+                                <i class="fas fa-trash"></i> Eliminar
+                            </button>
 
-        <button type="submit" class="btn btn-danger" onclick="return confirm('¿Está seguro de eliminar?');" style="margin-left: 10px;">
-            <i class="fas fa-trash"></i> Eliminar
-        </button>
-
-        <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-            <i class="fas fa-times"></i> Cancelar
-        </button>
-    }
+                            <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
+                                <i class="fas fa-times"></i> Cancelar
+                            </button>
+                        }
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
