--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Rol/Details.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Rol/Details.cshtml
@@ -4,29 +4,31 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalles De Rol</h1>
-<hr />
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-    </dl>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h2 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Detalles de Rol</h2>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <label asp-for="Nombre" class="control-label"></label>
+                        <input asp-for="Nombre" class="form-control" readonly />
+                    </div>
+
+                    <div class="form-group" style="margin-top: 10px;">
+                        <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Edit", new { id = Model.Id })'">
+                            <i class="fas fa-pencil-alt"></i> Ir a Modificar
+                        </button>
+                        <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index")'">
+                            <i class="fas fa-times"></i> Cancelar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-
-           @*BOTONES DE DETALLES DE ROL*@
-
-<td class="botonestabla">
-    <button type="button" class="btn btn-success" style="background-color: #264DA0; color: white; margin-right: 10px;" onclick="window.location.href='@Url.Action("Edit", new { id = Model.Id })'">
-        <i class="fas fa-pencil-alt"></i> Ir a Modificar
-    </button>
-</td>
-
-<td class="botonestabla">
-    <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-        <i class="fas fa-times"></i> Cancelar
-    </button>
-</td>
