--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/CambiarPassword.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/CambiarPassword.cshtml
@@ -4,19 +4,23 @@
     ViewData["Title"] = "CambiarPassword";
 }
 
-<h1>Cambiar Contraseña</h1>
+<h1 class="mb-4">Cambiar Contraseña</h1>
 <hr />
-<form asp-action="CambiarPassword">
+
+<form asp-action="CambiarPassword" class="container">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Id" class="form-control" />
-    <div class="row">
+
+    <div class="row mb-3">
         <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
+                <label asp-for="Login" class="control-label">Usuario</label>
                 <input asp-for="Login" class="form-control" disabled />
                 <span asp-validation-for="Login" class="text-danger"></span>
             </div>
         </div>
+    </div>
+
+    <div class="row mb-3">
         <div class="col-md-4">
             <div class="form-group">
                 <label class="control-label">Contraseña Actual</label>
@@ -24,7 +28,8 @@
             </div>
         </div>
     </div>
-    <div class="row">
+
+    <div class="row mb-3">
         <div class="col-md-4">
             <div class="form-group">
                 <label class="control-label">Contraseña Nueva</label>
@@ -32,6 +37,9 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
         </div>
+    </div>
+
+    <div class="row mb-3">
         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ConfirmPassword_aux" class="control-label">Confirmar Contraseña Nueva</label>
@@ -41,30 +49,18 @@
         </div>
     </div>
 
-    @*BOTONES DE CAMBIAR PASSWORD GUARDAR-REGRESAR*@
-
-    <div class="form-group" style="margin-top: 10px;">
+    <div class="form-group mt-4">
         <button type="submit" class="btn btn-success" style="margin-right: 10px;">
             <i class="fas fa-save"></i> Cambiar Contraseña
         </button>
-
         <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
             <i class="fas fa-times"></i> Cancelar
         </button>
     </div>
 
     <span class="text-danger">@ViewBag.Error</span>
-
-    @*<div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <input type="submit" value="Cambiar password" class="btn btn-primary" />
-            </div>
-            <span class="text-danger">@ViewBag.Error</span>
-        </div>
-    </div>*@
-
 </form>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
