--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Delete.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Delete.cshtml
@@ -4,89 +4,64 @@
     ViewData["Title"] = "Delete";
 }
 
-@{
-    ViewData["Title"] = "Delete";
-}
-<h1>Eliminar Usuario</h1>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Eliminar Usuario</h1>
+    </div>
+    <div class="card-body">
+        <form asp-action="Delete" class="container">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" class="form-control" />
 
-<h3>¿ Esta seguro que desea eliminar ?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Login)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRol)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rol.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Estatus)
-        </dt>
-        @if (Model.Estatus == 1)
-        {
-            <dd class="col-sm-10">
-                ACTIVO
-            </dd>
-        }
-        else if (Model.Estatus == 2)
-        {
-            <dd class="col-sm-10">
-                INACTIVO
-            </dd>
-        }
-        else
-        {
-            <dd class="col-sm-10"> </dd>
-        }
+            <dl class="row">
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Nombre" class="control-label">Nombre</label>
+                        <input asp-for="Nombre" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Apellido" class="control-label">Apellido</label>
+                        <input asp-for="Apellido" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Login" class="control-label">Login</label>
+                        <input asp-for="Login" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="IdRol" class="control-label">Rol</label>
+                        <input asp-for="Rol.Nombre" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Estatus" class="control-label">Estatus</label>
+                        <input asp-for="Estatus" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="FechaRegistro" class="control-label">Fecha de Registro</label>
+                        <input asp-for="FechaRegistro" class="form-control" readonly />
+                    </div>
+                </dt>
+            </dl>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaRegistro)
-        </dd>
-    </dl>
-
-    @* FUNCTION ELIMINAR USUARIO*@
-
-@*    <form asp-action="Delete">
-        <input type="submit" value="Eliminar" class="btn btn-danger" />
-        
-        <a asp-action="Index" class="btn btn-dark">Cancelar</a>
-    </form>
-    <span class="text-danger">@ViewBag.Error</span>
-</div>*@
-
-    @using (Html.BeginForm("Delete", "Usuario", new { id = Model.Id }, FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
-
-        <button type="submit" class="btn btn-danger" onclick="return confirm('¿Está seguro de eliminar?');" style="margin-left: 10px;">
-            <i class="fas fa-trash"></i> Eliminar
-        </button>
-
-        <button type="button" class="btn btn-secondary" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-            <i class="fas fa-times"></i> Cancelar
-        </button>
-        <span class="text-danger">@ViewBag.Error</span>
-    }
-
+            <!-- Botones -->
+            <div class="form-group" style="margin-top: 10px;">
+                <button type="submit" class="btn btn-danger" onclick="return confirm('¿Está seguro de eliminar?');" style="margin-right: 10px;">
+                    <i class="fas fa-trash"></i> Eliminar
+                </button>
+                <a class="btn btn-secondary" href="@Url.Action("Index")" style="margin-left: 10px;">
+                    <i class="fas fa-times"></i> Cancelar
+                </a>
+                <span class="text-danger">@ViewBag.Error</span>
+            </div>
+        </form>
+    </div>
 </div>
