--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Details.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Details.cshtml
@@ -4,73 +4,63 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Ver Usuario</h1>
-<hr />
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Login)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRol)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rol.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Estatus)
-        </dt>
-        @if (Model.Estatus == 1)
-        {
-            <dd class="col-sm-10">
-                ACTIVO
-            </dd>
-        }
-        else if (Model.Estatus == 2)
-        {
-            <dd class="col-sm-10">
-                INACTIVO
-            </dd>
-        }
-        else
-        {
-            <dd class="col-sm-10"> </dd>
-        }
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Ver Usuario</h1>
+    </div>
+    <div class="card-body">
+        <form asp-action="Edit" class="container">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" class="form-control" />
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaRegistro)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaRegistro)
-        </dd>
-    </dl>
+            <dl class="row">
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Nombre" class="control-label">Nombre</label>
+                        <input asp-for="Nombre" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Apellido" class="control-label">Apellido</label>
+                        <input asp-for="Apellido" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Login" class="control-label">Login</label>
+                        <input asp-for="Login" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="IdRol" class="control-label">Rol</label>
+                        <input asp-for="Rol.Nombre" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Estatus" class="control-label">Estatus</label>
+                        <input asp-for="Estatus" class="form-control" readonly />
+                    </div>
+                </dt>
+                <dt class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="FechaRegistro" class="control-label">Fecha de Registro</label>
+                        <input asp-for="FechaRegistro" class="form-control" readonly />
+                    </div>
+                </dt>
+            </dl>
+
+            <!-- Botones -->
+            <div class="form-group" style="margin-top: 10px;">
+                <a class="btn btn-success" href="@Url.Action("Edit", new { id = Model.Id })" style="margin-right: 10px;">
+                    <i class="fas fa-pencil-alt"></i> Editar
+                </a>
+                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
+                    <i class="fas fa-times"></i> Regresar
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
-
-@*BOTONES EDITADOS CON ICONOS*@
-
-<td class="botonestabla">
-    <button type="button" class="btn btn-success" style="background-color: #264DA0; color: white; margin-right: 10px;" onclick="window.location.href='@Url.Action("Edit", new { id = Model.Id })'">
-        <i class="fas fa-pencil-alt"></i> Ir a Modificar
-    </button>
-</td>
-
-<td class="botonestabla">
-    <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-        <i class="fas fa-times"></i> Cancelar
-    </button>
-</td>
