--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Index.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/Index.cshtml
@@ -10,148 +10,153 @@
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Rol> roles = ViewBag.Roles as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Rol>;
 }
 
-<h1>Buscar Usuario</h1>
-<div class="row ml-3">
-    <div class="col-md-12">
-        <form asp-action="Index">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label class="control-label">Nombre</label>
-                        <input type="text" class="form-control" name="nombre" />
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Buscar Usuario</h1>
+    </div>
+    <div class="card-body">
+        <div class="row ml-3">
+            <div class="col-md-12">
+                <form asp-action="Index">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="control-label">Nombre</label>
+                                <input type="text" class="form-control" name="nombre" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="control-label">Apellido</label>
+                                <input type="text" class="form-control" name="apellido" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="control-label">Login</label>
+                                <input type="text" class="form-control" name="login" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="control-label">Estatus</label>
+                                <select name="estatus" class="form-control">
+                                    <option selected value="0">SELECCIONAR</option>
+                                    <option value="1">ACTIVO</option>
+                                    <option value="2">INACTIVO</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label class="control-label">Apellido</label>
-                        <input type="text" class="form-control" name="apellido" />
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="control-label">Rol</label>
+                                <select name="idRol" class="form-control">
+                                    <option selected value="0">SELECCIONAR</option>
+                                    @foreach (var item in roles)
+                                    {
+                                        <option value="@item.Id">@item.Nombre</option>
+                                    }
+                                </select>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label class="control-label">Login</label>
-                        <input type="text" class="form-control" name="login" />
+                    <div class="form-group" style="margin-top: 10px;">
+                        <button type="submit" class="btn btn-purple" style="background-color: #0074D9; color: white;">
+                            <i class="fas fa-search"></i> Buscar
+                        </button>
+                        <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
+                            <i class="fas fa-plus"></i> Agregar
+                        </button>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label class="control-label">Estatus</label>
-                        <select name="estatus" class="form-control">
-                            <option selected value="0">SELECCIONAR</option>
-                            <option value="1">ACTIVO</option>
-                            <option value="2">INACTIVO</option>
-                        </select>
-                    </div>
-                </div>
+                </form>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label">Rol</label>
-                        <select name="idRol" class="form-control">
-                            <option selected value="0">SELECCIONAR</option>
-                            @foreach (var item in roles)
+        </div>
+        <div class="row mt-3">
+            <div class="col-md-12">
+                <div class="table-responsive paginationjs ml-3">
+                    <table class="table table-bordered" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Nombre)</th>
+                                <th>@Html.DisplayNameFor(model => model.Apellido)</th>
+                                <th>@Html.DisplayNameFor(model => model.Login)</th>
+                                <th>@Html.DisplayNameFor(model => model.Estatus)</th>
+                                <th>@Html.DisplayNameFor(model => model.IdRol)</th>
+                                <th>@Html.DisplayNameFor(model => model.FechaRegistro)</th>
+                                <th colspan="3">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
                             {
-                                <option value="@item.Id">@item.Nombre</option>
+                                <tr data-page="@numPage">
+                                    <td>@Html.DisplayFor(modelItem => item.Nombre)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Login)</td>
+                                    @if (item.Estatus == 1)
+                                    {
+                                        <td>ACTIVO</td>
+                                    }
+                                    else if (item.Estatus == 2)
+                                    {
+                                        <td>INACTIVO</td>
+                                    }
+                                    else
+                                    {
+                                        <td></td>
+                                    }
+                                    <td>@Html.DisplayFor(modelItem => item.Rol.Nombre)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.FechaRegistro)</td>
+                                    <td class="botonestabla">
+                                        <button type="button" class="btn btn-primary" style="background-color: #264DA0; color: white" onclick="window.location.href='@Url.Action("Edit", new { id = item.Id })'">
+                                            <i class="fas fa-pencil-alt"></i> Modificar
+                                        </button>
+                                    </td>
+                                    <td class="botonestabla">
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='@Url.Action("Details", new { id = item.Id })'">
+                                            <i class="fas fa-eye"></i> Detalles
+                                        </button>
+                                    </td>
+                                    <td class="botonestabla">
+                                        <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Delete", new { id = item.Id })'">
+                                            <i class="fas fa-trash"></i> Eliminar
+                                        </button>
+                                    </td>
+                                </tr>
+                                numRegistros++;
+                                if (numRegistros == numRegistrosPorPage)
+                                {
+                                    numPage++;
+                                    numRegistros = 0;
+                                }
                             }
-                        </select>
-                    </div>
+                            @{
+                                if (numRegistros == 0)
+                                {
+                                    numPage--;
+                                }
+                            }
+                        </tbody>
+                    </table>
                 </div>
-
             </div>
-            <div class="form-group" style="margin-top: 10px;">
-                <button type="submit" class="btn btn-purple" style="background-color: #0074D9; color: white;">
-                    <i class="fas fa-search"></i> Buscar
-                </button>
-                <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
-                    <i class="fas fa-plus"></i> Agregar
-                </button>
+        </div>
+        @if (numPage > 1)
+        {
+            <div class="row mt-3" style="overflow:auto">
+                <div class="col-md-12">
+                    <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
+                        <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
+                        @for (var i = 1; i <= numPage; i++)
+                        {
+                            <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
+                        }
+                        <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </div>
             </div>
-        </form>
+        }
     </div>
 </div>
-<div class="row mt-3">
-    <div class="col-md-12">
-        <div class="table-responsive paginationjs ml-3">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>@Html.DisplayNameFor(model => model.Nombre)</th>
-                        <th>@Html.DisplayNameFor(model => model.Apellido)</th>
-                        <th>@Html.DisplayNameFor(model => model.Login)</th>
-                        <th>@Html.DisplayNameFor(model => model.Estatus)</th>
-                        <th>@Html.DisplayNameFor(model => model.IdRol)</th>
-                        <th>@Html.DisplayNameFor(model => model.FechaRegistro)</th>
-                        <th colspan="3">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr data-page="@numPage">
-                            <td>@Html.DisplayFor(modelItem => item.Nombre)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Apellido)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Login)</td>
-                            @if (item.Estatus == 1)
-                            {
-                                <td>ACTIVO</td>
-                            }
-                            else if (item.Estatus == 2)
-                            {
-                                <td>INACTIVO</td>
-                            }
-                            else
-                            {
-                                <td></td>
-                            }
-                            <td>@Html.DisplayFor(modelItem => item.Rol.Nombre)</td>
-                            <td>@Html.DisplayFor(modelItem => item.FechaRegistro)</td>
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-primary" style="background-color: #264DA0; color: white" onclick="window.location.href='@Url.Action("Edit", new { id = item.Id })'">
-                                    <i class="fas fa-pencil-alt"></i> Modificar
-                                </button>
-                            </td>
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-info" onclick="window.location.href='@Url.Action("Details", new { id = item.Id })'">
-                                    <i class="fas fa-eye"></i> Detalles
-                                </button>
-                            </td>
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Delete", new { id = item.Id })'">
-                                    <i class="fas fa-trash"></i> Eliminar
-                                </button>
-                            </td>
-                        </tr>
-                        numRegistros++;
-                        if (numRegistros == numRegistrosPorPage)
-                        {
-                            numPage++;
-                            numRegistros = 0;
-                        }
-                    }
-                    @{
-                        if (numRegistros == 0)
-                        {
-                            numPage--;
-                        }
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-@if (numPage > 1)
-{
-    <div class="row mt-3" style="overflow:auto">
-        <div class="col-md-12">
-            <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
-                <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
-                @for (var i = 1; i <= numPage; i++)
-                {
-                    <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
-                }
-                <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </div>
-    </div>
-}
