CRUD CATEGORIA, MARCA Y PROVEEDOR - SIN DISEÑO NUEVO

--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -152,9 +152,9 @@
                     </a>
                     <div id="collapseReportes" class="collapse" aria-labelledby="headingReportes" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" asp-area="" asp-controller="ResolucionCredito" asp-action="IndexPrestamosActivos">Reporte de Compras</a>
-                            <a class="collapse-item" asp-area="" asp-controller="ResolucionCredito" asp-action="IndexPrestamosActivos">Reporte de Ventas</a>
-                            <a class="collapse-item" asp-area="" asp-controller="ResolucionCredito" asp-action="IndexPrestamosActivos">Reporte de Ajustes</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Compras</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Ajustes</a>
                         </div>
                     </div>
                 </li>
