CRUD FUNCIONAL DE VENTA Y DETALLE DE VENTAS, ADEMAS DE QUE CAMBIE Y MODIFIQUE TODAS LAS CAPAS DE ESTAS

--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -121,9 +121,9 @@
                     </a>
                     <div id="collapseVentas" class="collapse" aria-labelledby="headingVentas" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
-                            <a class="collapse-item" asp-area="" asp-controller="Factura" asp-action="Index">Ventas</a>
-                            <a class="collapse-item" asp-area="" asp-controller="DetallesFactura" asp-action="Index">Detalles de Ventas</a>
-                            <a class="collapse-item" asp-area="" asp-controller="Venta" asp-action="Venta">Formulario de Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Venta" asp-action="Index">Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="DetalleVenta" asp-action="Index">Detalles de Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Ventas" asp-action="Venta">Formulario de Ventas</a>
                         </div>
                     </div>
                 </li>
